# QML_random_pick_number

./: README.md
app1/: CMakeLists.txt  Main.qml  main.cpp  randomnumbergenerator.cpp  randomnumbergenerator.h  resources.qrc
